style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* border: 1px solid red; */
}

body, html{
    font-size: 20px;
    background-color: #000;
    color: #fff;
    font-family: sans-serif;
    width: 100%;
}

#passwd{
    font-size: 2em;
    text-align: center;
    letter-spacing: 0.15em;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

#passwd div{
    margin: 0 10px;
}

#picture{
    margin: 0 auto;
    text-align: center;
    line-height: 0px;
    max-height: 290px;
}

#picture img{
    max-width: 100%;
    width: 450px;
}

#img_container{
    /* border: 1px solid yellow; */
    max-width: 100%;
    width: 450px;
    margin: auto;
    position: relative;
}

#counter{
    color: #fff;
    position: absolute;
    bottom: 29%;
    left: 8%;
    font-size: 1.8em;
    letter-spacing: 0.2em;
}

#keyboard{
    width: 450px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.letter{
    padding: 10px;
    border: 4px solid #fff;
    border-radius: 8px;
    margin: 5px 5px;
    width: 50px;
    text-align: center;
    cursor: pointer;
    font-weight: 900;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.red{
    color:  rgb(99, 9, 9);
    background-color: rgba(66, 0, 0, 0.8);
    border: 4px solid rgb(146, 10, 10);
}

.green{
    color: green;
    background-color: rgba(77, 196, 41, 0.2);
    border: 4px solid green;
}

.message{
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    height: 350px;
    font-size: 1.3em;
    padding: 50px;
}

#button{
    color: yellowgreen;
    font-size: 1.5em;
    padding: 4%;
    border-radius: 20px;
    border: 3px solid yellowgreen;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#button:hover{
    background-color: yellowgreen;
    color: #fff;
    cursor: pointer;
}

@media only screen and (max-width: 450px){
    #keyboard{
        width: auto;
    }
    .letter{
        padding: 7px;
        border: 2px solid #fff;
        border-radius: 5px;
        margin: 3px 3px;
        width: 50px;
        font-weight: 900;
    }
    #passwd{
        font-size: 1.6em;
    }
    /* #picture img{
        height: 150px;
        width: auto;
    } */
}

@media only screen and (max-width: 330px){
    .letter{
        padding: 4px;
        border: 2px solid #fff;
        border-radius: 5px;
        margin: 3px 3px;
        width: 40px;
        font-weight: 900;
    }
    /* #img_container, #picture img{
        height: 150px;
        width: auto;
    } */
}

@media only screen and (min-width: 900px){
    #game{
        height: 350px;
        display: flex;
        justify-content: space-between;
        /* border: 1px solid red; */
    }
    /* #picture,#keyboard{
        border: 1px solid red;
    } */
    #picture img{
        height: 350px;
    }
}

@media only screen and (min-width: 1000px)
{
    #keyboard{
        margin-left: 30px;
    }
    #picture{
        margin-right: 30px;
    }
}

